# OSDev

./: .gdb_history  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  do-build.sh  gdt.c  hello.c  hello.elf  idt.asm  kernel.c  kernel.elf  link.ld  make-iso.sh  makeBridge.sh  ramfs.img  ramfs_gen  ramfs_gen.c  serial.c  stubstart.S  test.asm  test.h
apps/: CMakeLists.txt  Makefile  init.c  ls.c  ps.c  shell.c  test.c  testApp.c  testapp.c
apps/binaries/: prboom
apps/ramfs/: Makefile  fs.h  ramfs.h  ramfs_gen.c  readramfs  readramfs.c
boot/: boot.asm  idt.asm  util.asm
include/: acpi.h  asm.h  assert.h  boot.h  circularqueue.h  cmos.h  config.h  coraxstd.h  debug.h  device.h  display.h  e1000.h  elf.h  fs.h  io.h  keyboard_map.h  kmalloc.h  list.h  mmu.h  multiboot.h  p_allocator.h  pci.h  pipe.h  proc.h  ramfs.h  ringbuffer.h  screen.h  serial.h  spinlock.h  string.h  syscall.h  syscalls.h  task.h  time.h  trap.h  tree.h  types.h  vfs.h  vga.h
include_common/: coraxstd.h  dirent.h  fs_info.h  keyboard_map.h  sig.h
include_common/sys/: types.h
isofiles/boot/: kernel.elf  ramfs.img
isofiles/boot/grub/: grub.cfg
kernel/: CMakeLists.txt  cmos.c  debug.c  debug_constants.c  display.c  e1000.c  gdt.c  idt.c  io.c  kernel.c  link.ld  mmu.c  panic.c  pci.c  proc.c  rtl8139.c  serial.c  syscalls.c  task.c  terminal.c  trap.c
kernel/boot/: boot.asm  idt.asm
kernel/core/: cmos.c  debug.c  display.c  io.c  kernel.c  panic.c  serial.c  syscalls.c  task.c  terminal.c  trap.c
kernel/dev/: display.c  keyboard.c  null.c  proc.c  serial.c
kernel/include/: boot.h  circularqueue.h  cmos.h  config.h  debug.h  display.h  fs.h  io.h  kmalloc.h  list.h  mmu.h  multiboot.h  path.h  pipe.h  proc.h  ramfs.h  ringbuffer.h  rtl8139.h  screen.h  serial.h  spinlock.h  string.h  syscall.h  task.h  terminal.h  tree.h  vfs.h  vga.h
kernel/lib/: circularqueue.c  device.c  kmalloc.c  list.c  path.c  pipe.c  ramfs.c  screen.c  spinlock.c  string.c  time.c  tree.c  vfs.c
kernel/tests/: test.h  test_circularqueue.c  test_clone_directory.c  test_tree.c  test_vfs.c  tests.c
lib/: acpi.c  circularqueue.c  device.c  e1000.c  idt.c  io.c  keyboard.c  kmalloc.c  list.c  mmu.c  p_allocator.c  pci.c  pipe.c  ramdisk.c  ramfs.c  ringbuffer.c  rtl8139.c  screen.c  serial.c  spinlock.c  string.c  threaded_list.c  time.c  trap.c  tree.c  vfs.c
libc/: CMakeLists.txt  Makefile  __ctype_tolower_loc.c  crt0.S  ctype.c  implementme.c  main.c  main.h  malloc.c  printf.c  scanf.c  signal.c  string.c  string.h  sys.h  syscall.c  syscalls.h  types.h
libc/ctype/: __ctype_b_loc.c  __ctype_toupper_loc.c  ctype.c
libc/include/: assert.h  atomic.h  ctype.h  errno.h  features.h  implementme.h  inttypes.h  libm.h  malloc.h  math.h  pthread.h  scanf.h  signal.h  standalone_printf.h  stdarg.h  stdio.h  string.h  sys.h  syscalls.h  types.h
libc/include/sys/: types.h
libc/main/: crt0.nasm  implementme.c  initialize_libc.c  signal.S
libc/malloc/: malloc.c
libc/math/: fma.c  sqrtf.c
libc/string/: printf.c  scanf.c  standalone_printf.c  string.c
libc/syscall/: signal.c  syscall.c
libc/threading/: pthread.c
tests/: test_clone_directory.c  test_ringbuffer.c  test_tree.c  test_vfs.c  tests.c
toolchain/: build-it!.sh
toolchain/patches/: binutils.patch  gcc.patch
util/: gen_symbols.py
